# chart-analysis

./: .coverage  .coveragerc  .gitignore  MODERNIZATION.md  README.md  REFACTORING_SUMMARY.md  ROADMAP.md  WORKFLOW.md  data_loader.py  fetch_data.py  filter_fractals.py  kline_merging.py  process_ohlc.py  pyproject.toml  run_pipeline.py
.agent/prompts/: quant_architect.md
.agent/workflows/: code_review.md  git_sync.md  update_docs.md
.github/workflows/: code-quality.yml  lint.yml  tests.yml
adapters/: base.py  wind_cfe_adapter.py
data/: security_names.json
data/raw/: 000510_SH.xlsx  002352_SZ.xlsx  300604_SZ.xlsx  600415_SH.xlsx  881001_WI.xlsx  GC_CMX.xlsx  NDX_GI.xlsx  PDD_O.xlsx  SPTAUUSDOZ.xlsx  TL_CFE.xlsx
docs/: brooks-pa-concepts-cn.md  market-structure.md  singlebar-features.md  workflow.md
docs/try_and_err/: bar_type.md  brooks-pa-terms.md  fusion1.md  major-high-low.md  rewrite.md  v-top-bottom.md
output/000510_sh_中证a500/: 000510_SH_bar_features.html  000510_SH_interactive.html  000510_SH_structure.html
output/002352_sz_顺丰控股/: 002352_SZ_bar_features.html  002352_SZ_interactive.html
output/300604_sz_长川科技/: 300604_SZ_interactive.html
output/600519_sh_贵州茅台/: 600519_SH_interactive.html  600519_SH_贵州茅台_structure.html
output/gc_cmx_comex黄金/: GC_CMX_interactive.html
output/pdd_o_拼多多/: PDD_O_structure.html  PDD_O_structure_v1.html  PDD_O_structure_v2.html
output/tb10y_wi_10y国债活跃/: TB10Y.WI_interactive.html  TB10Y_WI_structure.html
output/tl_cfe_cffex30年期国债期货/: TL.CFE_bar_features.html  TL.CFE_interactive.html
src/: __init__.py  data_loader.py  filter_fractals.py  kline_merging.py  process_ohlc.py
src/adapters/: base.py  wind_cfe_adapter.py
src/analysis/: __init__.py  _bar_utils.py  _structure_utils.py  bar_features.py  fractals.py  indicators.py  interactive.py  merging.py  process_ohlc.py  reversals.py  structure.py  swings.py
src/config/: __init__.py  analysis.yaml  settings.py  ui.yaml
tests/: plot_min_dist_compare.py  test_bar_features.py  test_bar_utils.py  test_config.py  test_io.py  test_logging.py  test_min_dist.py  test_reversals.py  test_structure.py  test_structure_utils.py
(+31 files in other folders)
